--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,8 @@
 [build.environment]
   NODE_VERSION = "20"
   NPM_FLAGS = "--legacy-peer-deps"
+  NODE_ENV = "production"
+  CI = "false"
 
 [[redirects]]
   from = "/*"
@@ -14,3 +16,10 @@
 [[edge_functions]]
 function = "hello"
 path = "/test"
+
+[dev]
+  command = "npm run dev"
+  port = 5173
+  targetPort = 5173
+  publish = "dist"
+  autoLaunch = true
