--- a/package.json
+++ b/package.json
@@ -67,9 +67,9 @@
     "vitest": "^3.1.2"
   },
   "lint-staged": {
-    "*.{ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
+    "*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write",
+      "eslint --fix"
     ]
   }
 }
