--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
 engine-strict=true
 legacy-peer-deps=true
-node-options=--max-old-space-size=4096 
+node-options=--max-old-space-size=4096
+ignore-scripts=true 
