--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "type-check": "tsc --noEmit",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
-    "prepare": "husky install"
+    "setup": "husky install",
+    "postinstall": "[ \"$NODE_ENV\" != \"production\" ] && npm run setup || true"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
