--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc --noEmit && vite build",
+    "build": "npx tsc --noEmit && vite build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix && prettier --write .",
     "preview": "vite preview",
