--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx tsc --noEmit && vite build",
+    "prebuild": "npm install",
+    "build": "./node_modules/.bin/tsc --noEmit && vite build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix && prettier --write .",
     "preview": "vite preview",
@@ -63,7 +64,7 @@
     "postcss-preset-env": "^9.3.0",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.3.3",
+    "typescript": "^5.8.3",
     "vite": "^6.3.4",
     "vitest": "^3.1.2"
   },
