feat: adiciona configuração do cliente Supabase

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 VITE_TELEGRAM_BOT_TOKEN=your_telegram_bot_token
 VITE_APP_URL=http://localhost:5173 
+VITE_SUPABASE_URL=https://xxxx.supabase.co
+VITE_SUPABASE_ANON_KEY=your-public-anon-key
