--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "postcss-preset-env": "^9.3.0",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.17",
+    "terser": "^5.39.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.4",
     "vitest": "^3.1.2"
