chore: atualiza package.json com todas as dependências necessárias

--- a/package.json
+++ b/package.json
@@ -21,12 +21,11 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@supabase/supabase-js": "^2.39.7",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
-    "dotenv": "^16.5.0",
     "framer-motion": "^11.0.5",
-    "grammy": "^1.36.1",
     "lucide-react": "^0.503.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -63,7 +62,6 @@
     "husky": "^9.1.7",
     "jsdom": "^24.0.0",
     "lint-staged": "^15.2.2",
-    "nodemon": "^3.1.10",
     "postcss": "^8.5.3",
     "postcss-preset-env": "^9.3.0",
     "prettier": "^3.2.5",
