--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.0",
     "tailwind-merge": "^2.2.1",
+    "xyz": "^5.0.0",
     "zod": "^3.22.4",
     "zustand": "^5.0.3"
   },
