--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,12 @@
 [build]
   command = "npm run build"
   publish = "dist"
+  commandOrigin = "config"
+  external = ["typescript"]
 
 [build.environment]
-  NODE_VERSION = "20"
-  NPM_FLAGS = "--legacy-peer-deps"
+  NODE_VERSION = "18.18.2"
+  NPM_VERSION = "9.8.1"
   NODE_ENV = "production"
   CI = "false"
 
@@ -23,3 +25,6 @@ path = "/test"
   targetPort = 5173
   publish = "dist"
   autoLaunch = true
+
+[[plugins]]
+  package = "@netlify/plugin-lighthouse"
