--- a/package.json
+++ b/package.json
@@ -74,9 +74,12 @@
     "vitest": "^3.1.2"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,json,css,scss,md}": [
+    "*.{js,jsx,ts,tsx,json,md}": [
       "prettier --write",
       "eslint --fix"
+    ],
+    "*.{css,scss}": [
+      "prettier --write"
     ]
   }
 }
