--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -11,6 +11,10 @@ on:
 jobs:
   security:
     runs-on: ubuntu-latest
+    permissions:
+      security-events: write
+      actions: read
+      contents: read
     steps:
       - uses: actions/checkout@v4
 
@@ -28,4 +32,4 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --severity-threshold=high 
+          args: --severity-threshold=high --fail-on=upgradable 
